--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,10 @@ server.port=9001
 
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=always
+
+schedule.org.id=206447570
+sweeper.branch.dryRun=true
+sweeper.branch.delete.days=5
+sweeper.pullRequest.dryRun=true
+sweeper.pullRequest.delete.days=2
+sweeper.api.key=${GITHUB-API-KEY}
