added base functionality, delete branches

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,5 @@ sweeper.branch.dryRun=true
 sweeper.branch.delete.days=5
 sweeper.pullRequest.dryRun=true
 sweeper.pullRequest.delete.days=2
+sweeper.ignore.branches=main,develop
 sweeper.api.key=${GITHUB-API-KEY}
