--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ sweeper.pullRequest.dryRun=true
 sweeper.pullRequest.delete.days=2
 sweeper.ignore.branches=main,develop
 
-sweeper.api.key=${GITHUB-API-KEY}
-sweeper.discord.notify.endpoint=${DISCORD-NOTIFY}
+sweeper.api.key=${GITHUB_API_KEY}
+sweeper.discord.notify.endpoint=${DISCORD_NOTIFY}
