added documentation and removed hard coded schedule time

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,7 @@ sweeper.pullRequest.dryRun=false
 sweeper.pullRequest.delete.days=2
 sweeper.ignore.branches=main,develop
 
+sweeper.schedule=0 7 * * 1
+
 sweeper.api.key=${GITHUB_API_KEY}
 sweeper.discord.notify.endpoint=${DISCORD_NOTIFY}
