--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=always
 
 schedule.org.id=206447570
-sweeper.branch.dryRun=false
-sweeper.branch.delete.days=5
-sweeper.pullRequest.dryRun=false
-sweeper.pullRequest.delete.days=2
+sweeper.branch.dryRun=true
+sweeper.branch.delete.days=-1
+sweeper.pullRequest.dryRun=true
+sweeper.pullRequest.delete.days=-1
 sweeper.ignore.branches=main,develop
 
 sweeper.schedule=0 7 * * 1
