--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,13 @@ management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=always
 
 schedule.org.id=206447570
-sweeper.branch.dryRun=true
-sweeper.branch.delete.days=-1
-sweeper.pullRequest.dryRun=true
-sweeper.pullRequest.delete.days=-1
+sweeper.branch.dryRun=false
+sweeper.branch.delete.days=5
+sweeper.pullRequest.dryRun=false
+sweeper.pullRequest.delete.days=2
 sweeper.ignore.branches=main,develop
 
 sweeper.schedule=0 7 * * 1
 
 sweeper.api.key=${GITHUB_API_KEY}
-sweeper.discord.notify.endpoint=${DISCORD_NOTIFY}
+sweeper.discord.notify.endpoint=${DISCORD_REPORT_NOTIFICATION}
